# girdle

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/dictionary/: dictionary.rs  error.rs  mod.rs
src/gtk/: mod.rs
